<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bookMarkSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/dialog_bookmarks_sub"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5" >

        <LinearLayout
            android:id="@+id/searchDialogList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/delBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delBookmark" />

    </LinearLayout>

</LinearLayout>